<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Activities.MainActivity">

    <item
        android:id="@+id/menu_addStudent"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        android:title="@string/menu_addStudent" />

    <item
        android:id="@+id/menu_editStudent"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always"
        android:title="@string/menu_editStudent" />

    <item
        android:id="@+id/menu_deleteStudent"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always|withText"
        android:title="@string/menu_deleteStudent" />

    <item
        android:id="@+id/about"
        app:showAsAction="never"
        android:title="@string/about" />

    <item
        android:id="@+id/signout"
        android:title="@string/menu_signout"
        app:showAsAction="never" />

</menu>